--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "eslint": "^9.35.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0"
+    "eslint": "^9.35.0"
   }
 }
